--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@ include(ValaPrecompile)
 
 vala_precompile(GREDIS_VALA_C 
 	GRedis.vala
+	Operation.vala
+	SingleOperation.vala
+	HashOperation.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
 	posix
