--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: c
 sudo: required
 dist: trusty
+services:
+  - redis-server
 
 compiler:
   - gcc
@@ -10,13 +12,13 @@ before_install:
   - sudo add-apt-repository ppa:vala-team/ppa -y
   - sudo apt-get update -qq
   - sudo apt-get install -qq build-essential cmake libglib2.0-dev libgee-0.8
-         valac-0.22 gobject-introspection libgirepository1.0-dev libhiredis-dev
-         redis-server
+         valac-0.22 gobject-introspection libgirepository1.0-dev
 
 before_script:
+  - wget http://mirrors.kernel.org/ubuntu/pool/universe/h/hiredis/libhiredis-dev_0.13.3-2_amd64.deb
+  - wget http://mirrors.kernel.org/ubuntu/pool/universe/h/hiredis/libhiredis0.13_0.13.3-2_amd64.deb
+  - sudo dpkg -i libhiredis-dev_0.13.3-2_amd64.deb libhiredis0.13_0.13.3-2_amd64.deb
   - mkdir build
   - cd build
-  - cmake ..
 
-script: make && cd test && gtester --verbose ./test-gredis
-
+script: cmake .. && make && cd test && gtester --verbose ./test-gredis
