--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,10 @@ include(ValaPrecompile)
 
 vala_precompile(GREDIS_VALA_C 
 	GRedis.vala
+	HashOperation.vala
+	LogHandler.vala
 	Operation.vala
 	SingleOperation.vala
-	HashOperation.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
 	posix
