--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,8 @@ include(ValaPrecompile)
 vala_precompile(VALA_C 
 	test-runner.vala
 	maintest.vala
+	hashtest.vala
+	listtest.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
 	posix
