Start the concept of RedisMap, a Gee.AbstractMap implementation that can play nice with Redis.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ vala_precompile(GREDIS_VALA_C
 	ListOperation.vala
 	LogHandler.vala
 	Operation.vala
+	RedisMap.vala
 	SingleOperation.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
