--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 language: c
 sudo: required
 dist: trusty
-services:
-  - redis-server
 
 compiler:
   - gcc
   - clang
 
 before_install:
+  - sudo add-apt-repository ppa:chris-lea/redis-server -y
   - sudo add-apt-repository ppa:vala-team/ppa -y
   - sudo apt-get update -qq
+  - sudo apt-get remove redis-server
   - sudo apt-get install -qq build-essential cmake libglib2.0-dev libgee-0.8
-         valac-0.22 gobject-introspection libgirepository1.0-dev
+         valac-0.30 gobject-introspection libgirepository1.0-dev redis-server
+  - sudo /etc/init.d/redis-server restart
 
 before_script:
   - wget http://mirrors.kernel.org/ubuntu/pool/universe/h/hiredis/libhiredis-dev_0.13.3-2_amd64.deb
