Move KEYS to a new DatabaseOperation class, for database-wide operations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ include(ValaPrecompile)
 
 vala_precompile(GREDIS_VALA_C 
 	GRedis.vala
+	DatabaseOperation.vala
 	HashOperation.vala
 	ListOperation.vala
 	LogHandler.vala
